# Anemone

./: .gitignore  LICENSE  README.md  app.py  check_install.py  flake.nix  lol.txt  main.py  memory.py  nodes.py  orchestration.py  pyproject.toml  seed_memory.py  test_command_detection.py  test_fix.py  test_guard_case.py  test_memory_retrieval.py  test_mock_integration.py  test_simple_spaces.py  utils.py
memory/: chroma.sqlite3
my_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
tests/: README.md  __init__.py  debug_test.py  test_error_handling.py  test_fix_guard.py  test_integration.py  test_ollama.py  test_streaming_spaces.py  test_ui_flow.py
